# Dossie_Contabil

./: main.py
New_automation/: main.py
New_automation/.devcontainer/: devcontainer.json
New_automation/app/core/: automation.py  file_processor..py
New_automation/app/utils/: __init__.py
New_automation/config/: __init__.py  constants.py
app/: main.py
app/core/: __init__.py
app/utils/: helpers.py  logger.py
files/Teste_Dossie/: testes.md
outputs/: FILES_CREATED.txt  INDEX.md  SUMMARY.md
outputs/Automatizar_Dossie/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALATION.md  Makefile  QUICKSTART.md  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
outputs/Automatizar_Dossie/.streamlit/: config.toml
outputs/Automatizar_Dossie/app/: main.py
outputs/Automatizar_Dossie/app/core/: automation.py  file_processor.py
outputs/Automatizar_Dossie/config/: settings.py
outputs/Automatizar_Dossie/tests/: test_automation.py  test_file_processor.py
